[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
color-eyre = { version = "0.6.3" }
duct = { workspace = true }
eyre = { workspace = true }
jiff = "0.1.15"
ureq = { workspace = true }

# [workspace]
# members = ["day_*"]

[workspace.dependencies]
clap = { version = "4.5.21", features = ["derive"] }
duct = "0.13.7"
eyre = "0.6.12"
itertools = "0.13.0"
nalgebra = "0.33.2"
num = "0.4.3"
rayon = "1.8.0"
strum = { version = "0.26.3", features = ["derive"] }
tap = "1.0.1"
ureq = "2.11.0"
winnow = "0.6.20"
