[package]
name = "day_12"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc2024 = { path = ".." }
eyre = { workspace = true }
itertools = { workspace = true }
pathfinding = "4.12.0"
strum = { workspace = true }
tap = { workspace = true }
winnow = { workspace = true }
