[package]
name = "day_14"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc2024 = { path = ".." }
eyre = { workspace = true }
itertools = { workspace = true }
regex.workspace = true
strum = { workspace = true }
tap = { workspace = true }
winnow = { workspace = true }
